[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/enemycrawler.png" type="Texture" id=1]
[ext_resource path="res://EnemyCrawler.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 74.1707
height = 42.8021

[node name="EnemyCrawler" type="KinematicBody2D" groups=[
"enemies",
]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6.64 )
shape = SubResource( 1 )

[node name="flash" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -6.64 )
shape = SubResource( 1 )

[connection signal="die" from="." to="." method="_on_EnemyCrawler_die"]
[connection signal="timeout" from="flash" to="." method="_on_flash_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
